--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<img src="/images/KiG_Logo_en_RGB.jpg" alt="logo" style="width:50%">
+								<img src="../website-temp/images/KiG_Logo_en_RGB.jpg" alt="logo" style="width:50%">
 
 								<h1></h1>
 							</header>
@@ -202,4 +202,5 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
