--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 </p>
 <br>
 
-<img src="/images/HBK_Logo.JPG" alt="logo HBK" style="width:30%">
-<img src="/images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%">
-<img src="/images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%">
+<img src="images/HBK_Logo.JPG" alt="logo HBK" style="width:30%">
+<img src="images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%">
+<img src="images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%">
 
 
 
@@ -204,5 +204,6 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
