--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Braunschweig (HBK) und die Hochschule für Musik, Theater und Medien Hannover
 zumeist wenig bekannten und kaum sichtbaren Wirkungsweisen der Künste
 hervorzuheben und zu erforschen.</p>
 
-<h2>Forschungsprogramm/Forschungsfragen </h2>
+<h2>Forschungsprogramm/<br>Forschungsfragen </h2>
 <p>
 Das dreiteilige Forschungsprojekt widmet sich der Frage, wie künstlerisches
 Praxiswissen – als Prozess-, Handlungs- und Reflexionswissen – Gesellschaft
@@ -204,6 +204,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
