--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@ Wissenschaftliche Mitarbeiter*innen:<br>
 Dr. Aljoscha Paulus (HMTMH) Kontakt: Aljoscha.Paulus@ijk.hmtm-hannover.de
 <br>Weiqi Wang (HBK) Kontakt: w.wang@hbk-bs.de<br><br>
 <strong>Ansprechpartnerin</strong> <br>
-Koordination: <br>Dr. Susanne Bosch, Kontakt: su.bosch@hbk-bs.de
+Koordination: <br>Dr. Susanne Bosch, Kontakt: 
+<a href="mailto:su.bosch@hbk-bs.de">su.bosch@hbk-bs.de</a>
 </p>
 <p><Strong>Laufzeit:</Strong><br>01.05.2024 – 30.06.2029</p>
 <p><Strong>Fördermittelgeber:</Strong><br>Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
@@ -203,6 +204,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
