--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@ Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: Christine.Meltzer@ijk.hmtm-
 hannover.de<br><br>
 Wissenschaftliche Mitarbeiter*innen:<br>
 Dr. Aljoscha Paulus (HMTMH) Kontakt: Aljoscha.Paulus@ijk.hmtm-hannover.de
-<br>Weiqi Wang (HBK) Kontakt: w.wang@hbk-bs.de<br><br>
+<br>Weiqi Wang (HBK) Kontakt: 
+<a href="mailto:w.wang@hbk-bs.de">w.wang@hbk-bs.de</a>
+	
+	<br><br>
 <strong>Ansprechpartnerin</strong> <br>
 Koordination: <br>Dr. Susanne Bosch, Kontakt: 
 <a href="mailto:su.bosch@hbk-bs.de">su.bosch@hbk-bs.de</a>
@@ -204,6 +207,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
