--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 								<h1></h1>
 							</header>
 							<div class="content">
-								<p>Forschungsprojekt Kunst in Gesellschaft: Transfer als Praxis- und
-Wissensform</p>
+								<!--<p>Forschungsprojekt Kunst in Gesellschaft: Transfer als Praxis- und
+Wissensform</p> -->
 								
 							</div>
 						</div>
@@ -207,6 +207,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
