--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@ Prof. *in Dr. Annette Löseke (HBK) Kontakt: a.loeseke@hbk-bs.de<br>
 Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: Christine.Meltzer@ijk.hmtm-
 hannover.de<br><br>
 Wissenschaftliche Mitarbeiter*innen:<br>
-Dr. Aljoscha Paulus (HMTMH) Kontakt: Aljoscha.Paulus@ijk.hmtm-hannover.de
-<br>Weiqi Wang (HBK) Kontakt: 
+Dr. Aljoscha Paulus (HMTMH) Kontakt: 
+<a href="mailto:aljoscha.paulus@ijk.hmtm-hannover.de">Aljoscha.Paulus@ijk.hmtm-hannover.de</a>
+<br>
+Weiqi Wang (HBK) Kontakt: 
 <a href="mailto:w.wang@hbk-bs.de">w.wang@hbk-bs.de</a>
 	
 	<br><br>
@@ -207,6 +209,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
