--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@ Dr. Lea-Sophie Schiel (HMTMH), Kontakt: leasophie.schiel@ijk.hmtm-hannover.de
 <p>
 	<h3>Forschungsteil III</h3>
 Prof. *in Dr. Annette Löseke (HBK) Kontakt: a.loeseke@hbk-bs.de<br>
-Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: Christine.Meltzer@ijk.hmtm-
-hannover.de<br><br>
+Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: 
+<a href="mailto:Christine.Meltzer@ijk.hmtm-hannover.de">Christine.Meltzer@ijk.hmtm-hannover.de</a>
+</p>
+									<br><br>
 Wissenschaftliche Mitarbeiter*innen:<br>
 Dr. Aljoscha Paulus (HMTMH) Kontakt: 
 <a href="mailto:aljoscha.paulus@ijk.hmtm-hannover.de">Aljoscha.Paulus@ijk.hmtm-hannover.de</a>
@@ -209,6 +211,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
