--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ Dr. Lea-Sophie Schiel (HMTMH), Kontakt: leasophie.schiel@ijk.hmtm-hannover.de
 
 <p>
 	<h3>Forschungsteil III</h3>
-Prof. *in Dr. Annette Löseke (HBK) Kontakt: a.loeseke@hbk-bs.de<br>
+Prof. *in Dr. Annette Löseke (HBK) Kontakt: 
+<a href="mailto:a.loeseke@hbk-bs.de">a.loeseke@hbk-bs.de</a>a.loeseke@hbk-bs.de<br>
 Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: 
 <a href="mailto:Christine.Meltzer@ijk.hmtm-hannover.de">Christine.Meltzer@ijk.hmtm-hannover.de</a>
 </p>
@@ -211,6 +212,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
