--- a/index.html
+++ b/index.html
@@ -122,19 +122,26 @@ demokratischen und vielfältigen Gesellschaft sichtbar zu machen.
 
 <p>
 	<h3>Forschungsteil I</h3>
-Prof. *in Dr. Dorothea Hilliger (HBK), Kontakt: d.hilliger@hbk-bs.de <br>
-Prof. *in Regina Guhl (HMTMH) Kontakt: regina.guhl@ijk.hmtm-hannover.de <br><br>
+Prof. *in Dr. Dorothea Hilliger (HBK), Kontakt: 
+a href="d.hilliger@hbk-bs.de">d.hilliger@hbk-bs.de</a> <br>
+Prof. *in Regina Guhl (HMTMH) Kontakt: 
+<a href="mailto:regina.guhl@ijk.hmtm-hannover.de">regina.guhl@ijk.hmtm-hannover.de</a> <br><br>
 Wissenschaftliche Mitarbeiterinnen:<br>
-Dr. Lea-Sophie Schiel (HMTMH), Kontakt: leasophie.schiel@ijk.hmtm-hannover.de
+Dr. Lea-Sophie Schiel (HMTMH), Kontakt: 
+<a href="mailto:leasophie.schiel@ijk.hmtm-hannover.de">leasophie.schiel@ijk.hmtm-hannover.de</a>
 </p>
 
     <h3>Forschungsteil II</h3>
 
-    Prof. *in Dr. Rahel Puffert (HBK), Kontakt: r.puffert@hbk-bs.de <br><br>
+    Prof. *in Dr. Rahel Puffert (HBK), Kontakt: 
+	<a href="mailto:r.puffert@hbk-bs.de">r.puffert@hbk-bs.de</a> <br><br>
 
     Wissenschaftliche Mitarbeiterinnen:<br>
-    Dr. Anne Kurr (HBK) Kontakt: a.kurr@hbk-bs.de<br>
-    Nora Brünger (HBK) Kontakt: n.bruenger@hbk-bs.de
+    Dr. Anne Kurr (HBK) Kontakt: 
+	<a href="mailto:a.kurr@hbk-bs.de">a.kurr@hbk-bs.de</a>
+<br>
+    Nora Brünger (HBK) Kontakt: 
+	<a href="mailto:n.bruenger@hbk-bs.de">n.bruenger@hbk-bs.de</a>
 
 <p>
 	<h3>Forschungsteil III</h3>
@@ -212,6 +219,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
