--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Dr. Lea-Sophie Schiel (HMTMH), Kontakt:
 <p>
 	<h3>Forschungsteil III</h3>
 Prof. *in Dr. Annette Löseke (HBK) Kontakt: 
-<a href="mailto:a.loeseke@hbk-bs.de">a.loeseke@hbk-bs.de</a>a.loeseke@hbk-bs.de<br>
+<a href="mailto:a.loeseke@hbk-bs.de">a.loeseke@hbk-bs.de</a><br>
 Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: 
 <a href="mailto:Christine.Meltzer@ijk.hmtm-hannover.de">Christine.Meltzer@ijk.hmtm-hannover.de</a>
 </p>
@@ -219,6 +219,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
