--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ demokratischen und vielfältigen Gesellschaft sichtbar zu machen.
 <p>
 	<h3>Forschungsteil I</h3>
 Prof. *in Dr. Dorothea Hilliger (HBK), Kontakt: 
-a href="d.hilliger@hbk-bs.de">d.hilliger@hbk-bs.de</a> <br>
+<a href="d.hilliger@hbk-bs.de">d.hilliger@hbk-bs.de</a> <br>
 Prof. *in Regina Guhl (HMTMH) Kontakt: 
 <a href="mailto:regina.guhl@ijk.hmtm-hannover.de">regina.guhl@ijk.hmtm-hannover.de</a> <br><br>
 Wissenschaftliche Mitarbeiterinnen:<br>
@@ -219,6 +219,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
