--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ demokratischen und vielfältigen Gesellschaft sichtbar zu machen.
 	<h3>Forschungsteil I</h3>
 Prof. *in Dr. Dorothea Hilliger (HBK), Kontakt: 
 <a href="mailto:d.hilliger@hbk-bs.de">d.hilliger@hbk-bs.de</a> <br>
-Prof. *in Regina Guhl (HMTMH) Kontakt: 
+Prof. *in Regina Guhl (HMTMH), Kontakt: 
 <a href="mailto:regina.guhl@ijk.hmtm-hannover.de">regina.guhl@ijk.hmtm-hannover.de</a> <br><br>
 Wissenschaftliche Mitarbeiterinnen:<br>
 Dr. Lea-Sophie Schiel (HMTMH), Kontakt: 
@@ -137,25 +137,25 @@ Dr. Lea-Sophie Schiel (HMTMH), Kontakt:
 	<a href="mailto:r.puffert@hbk-bs.de">r.puffert@hbk-bs.de</a> <br><br>
 
     Wissenschaftliche Mitarbeiterinnen:<br>
-    Dr. Anne Kurr (HBK) Kontakt: 
+    Dr. Anne Kurr (HBK), Kontakt: 
 	<a href="mailto:a.kurr@hbk-bs.de">a.kurr@hbk-bs.de</a>
 <br>
-    Nora Brünger (HBK) Kontakt: 
+    Nora Brünger (HBK), Kontakt: 
 	<a href="mailto:n.bruenger@hbk-bs.de">n.bruenger@hbk-bs.de</a>
 
 <p>
 	<h3>Forschungsteil III</h3>
-Prof. *in Dr. Annette Löseke (HBK) Kontakt: 
+Prof. *in Dr. Annette Löseke (HBK), Kontakt: 
 <a href="mailto:a.loeseke@hbk-bs.de">a.loeseke@hbk-bs.de</a><br>
-Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: 
+Prof. *in Dr. Christine E. Meltzer (HMTMH), Kontakt: 
 <a href="mailto:Christine.Meltzer@ijk.hmtm-hannover.de">Christine.Meltzer@ijk.hmtm-hannover.de</a>
 </p>
 									<br><br>
 Wissenschaftliche Mitarbeiter*innen:<br>
-Dr. Aljoscha Paulus (HMTMH) Kontakt: 
+Dr. Aljoscha Paulus (HMTMH), Kontakt: 
 <a href="mailto:aljoscha.paulus@ijk.hmtm-hannover.de">Aljoscha.Paulus@ijk.hmtm-hannover.de</a>
 <br>
-Weiqi Wang (HBK) Kontakt: 
+Weiqi Wang (HBK), Kontakt: 
 <a href="mailto:w.wang@hbk-bs.de">w.wang@hbk-bs.de</a>
 	
 	<br><br>
@@ -219,6 +219,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
