--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 							<header class="major">
 								<img src="images/KiG_Logo_de_RGB.jpg" alt="logo" style="width:100%">
 
-								<h1></h1>
 							</header>
 							<div class="content">
 								<!--<p>Forschungsprojekt Kunst in Gesellschaft: Transfer als Praxis- und
@@ -57,7 +56,7 @@ Braunschweig (HBK) und die Hochschule für Musik, Theater und Medien Hannover
 zumeist wenig bekannten und kaum sichtbaren Wirkungsweisen der Künste
 hervorzuheben und zu erforschen.</p>
 
-<h2>Forschungsprogramm/<br>Forschungsfragen </h2>
+<h3>Forschungsprogramm/<br>Forschungsfragen </h3>
 <p>
 Das dreiteilige Forschungsprojekt widmet sich der Frage, wie künstlerisches
 Praxiswissen – als Prozess-, Handlungs- und Reflexionswissen – Gesellschaft
@@ -75,9 +74,9 @@ Beitrag vermögen künstlerische Praxisformen hier zu leisten?
 Im Rahmen des Projekts werden drei zentrale Forschungsfelder untersucht:	
 </p>
 
-<h1>Forschungsteil I</h1>
-<h2>Künstlerische Praxisformen in verschiedenen
-gesellschaftlichen Feldern</h2>
+<h3>Forschungsteil I</h3>
+<h3>Künstlerische Praxisformen in verschiedenen
+gesellschaftlichen Feldern</h3>
 <p>Anhand qualitativer Befragungen von Absolvent*innen der HBK und der HMTMH, die
 in außerkünstlerischen Bereichen tätig sind, untersucht das Teilprojekt den Transfer
 künstlerischer Praxisformen in verschiedene gesellschaftliche Felder. Im Zentrum
@@ -87,9 +86,9 @@ gesellschaftliche Prozesse gestalten und Transformationsprozesse anstoßen. Auf
 Basis der Praxisbeschreibungen können nicht zuletzt Aussagen über die komplexen
 Wirkungsweisen künstlerischer Ausbildungen getroffen werden.</p>
 
-<h1>Forschungsteil II</h1>
-<h2> Kunst als öffentliche Praxis in gesellschaftlichen
-Transformationsprozessen</h2>
+<h3>Forschungsteil II</h3>
+<h3> Kunst als öffentliche Praxis in gesellschaftlichen
+Transformationsprozessen</h3>
 <p>In diesem Teilprojekt werden künstlerische Positionen im öffentlichen Raum
 untersucht, insbesondere solche, die sich an der Schnittstelle von Aktivismus und
 Kunst bewegen. Im Zentrum stehen unter anderem Fragestellungen zu hybriden
@@ -98,8 +97,8 @@ Gegenöffentlichkeiten im Kontext der autoritären Dynamiken der heutigen Zeit 
 auch zu Verschränkungen von Theorie und Praxis in hydrofeministischen Praktiken
 und Care-Diskursen.</p>
 
-<h1>Forschungsteil III</h>
-<h2>Partnerschaften und kultureller Wissenstransfer</h2>
+<h3>Forschungsteil III</h3>
+<h3>Partnerschaften und kultureller Wissenstransfer</h3>
 <p>
 Das Teilprojekt analysiert zum einen Partnerschaften und kulturellen
 Wissenstransfer u. a. anhand von Kommunikationsweisen und Strategien von
@@ -118,7 +117,7 @@ die widerständigen Potenziale künstlerischer Praxis im Sinne einer offenen,
 demokratischen und vielfältigen Gesellschaft sichtbar zu machen.	
 </p>
 
-<h1>Forschungsteile</h1>
+<h3>Forschungsteile</h3>
 
 <p>
 	<h3>Forschungsteil I</h3>
@@ -219,21 +218,3 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
