--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@ Weiqi Wang (HBK), Kontakt:
 <a href="mailto:w.wang@hbk-bs.de">w.wang@hbk-bs.de</a>
 </p>	
 	<br><br>
-<strong>Ansprechpartnerin</strong> <br>
+<h3>Ansprechpartnerin</h3> <br>
 Koordination: <br>Dr. Susanne Bosch, Kontakt: 
 <a href="mailto:su.bosch@hbk-bs.de">su.bosch@hbk-bs.de</a>
 </p>
-<p><Strong>Laufzeit:</Strong><br>01.05.2024 – 30.06.2029</p>
-<p><Strong>Fördermittelgeber:</Strong><br>Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
+<p><h3>Laufzeit:</h3><br>01.05.2024 – 30.06.2029</p>
+<p><h3>Fördermittelgeber:</h3><br>Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
 durch das Land Niedersachsen und die VolkswagenStiftung.</p>
-<p><Strong>LIKE&amp;SHARE</Strong><br>
+<p><h3>LIKE&amp;SHARE</h3><br>
 <a href="https://www.instagram.com/kunstingesellschaft/">Instagram</a>
 <a href="https://www.linkedin.com/in/kunst-in-gesellschaft-3b2905395/">LinkedIn</a>
 </p>
@@ -217,5 +217,6 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
