--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 <p><h3>LIKE&amp;SHARE</h3><br>
 <a href="https://www.instagram.com/kunstingesellschaft/">Instagram</a>
 <a href="https://www.linkedin.com/in/kunst-in-gesellschaft-3b2905395/">LinkedIn</a>
+<a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/">Seite der HBK Braunschweig</a>
 </p>
 <br>
 
@@ -217,6 +218,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
