--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 <a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/">Seite der HBK Braunschweig</a>
 </p>
 <br>
-
+<p style="color: #5900FE;">Diese Webseite befindet sich gerade im Aufbau.</p>
+<br>
 <img src="images/HBK_Logo.JPG" alt="logo HBK" style="width:30%">
 <img src="images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%">
 <img src="images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%">
@@ -218,6 +219,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
