--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Weiqi Wang (HBK), Kontakt:
 <a href="mailto:w.wang@hbk-bs.de">w.wang@hbk-bs.de</a>
 </p>	
 	<br><br>
-<h3>Ansprechpartnerin</h3> <br>
+<h3>Ansprechpartnerin</h3> 
 Koordination: <br>Dr. Susanne Bosch, Kontakt: 
 <a href="mailto:su.bosch@hbk-bs.de">su.bosch@hbk-bs.de</a>
 </p>
@@ -219,6 +219,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
