--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ Weiqi Wang (HBK), Kontakt:
 Koordination: <br>Dr. Susanne Bosch, Kontakt: 
 <a href="mailto:su.bosch@hbk-bs.de">su.bosch@hbk-bs.de</a>
 </p>
-<p><h3>Laufzeit:</h3><br>01.05.2024 – 30.06.2029</p>
+<p><h3>Laufzeit:</h3>
+01.05.2024 – 30.06.2029</p>
 <p><h3>Fördermittelgeber:</h3><br>Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
 durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 <p><h3>LIKE&amp;SHARE</h3><br>
@@ -219,6 +220,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
