--- a/index.html
+++ b/index.html
@@ -163,9 +163,10 @@ Koordination: <br>Dr. Susanne Bosch, Kontakt:
 </p>
 <p><h3>Laufzeit:</h3>
 01.05.2024 – 30.06.2029</p>
-<p><h3>Fördermittelgeber:</h3><br>Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
+<p><h3>Fördermittelgeber:</h3>
+Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
 durch das Land Niedersachsen und die VolkswagenStiftung.</p>
-<p><h3>LIKE&amp;SHARE</h3><br>
+<p><h3>LIKE&amp;SHARE</h3>
 <a href="https://www.instagram.com/kunstingesellschaft/">Instagram</a>
 <a href="https://www.linkedin.com/in/kunst-in-gesellschaft-3b2905395/">LinkedIn</a>
 <a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/">Seite der HBK Braunschweig</a>
@@ -220,6 +221,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
