--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ die widerständigen Potenziale künstlerischer Praxis im Sinne einer offenen,
 demokratischen und vielfältigen Gesellschaft sichtbar zu machen.	
 </p>
 
-<h3>Forschungsteile</h3>
+<h3>Forschende</h3>
 
 <p>
 	<h3>Forschungsteil I</h3>
@@ -221,6 +221,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
