--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Braunschweig (HBK) und die Hochschule für Musik, Theater und Medien Hannover
 zumeist wenig bekannten und kaum sichtbaren Wirkungsweisen der Künste
 hervorzuheben und zu erforschen.</p>
 
-<h3>Forschungsprogramm/<br>Forschungsfragen </h3>
+<h3>Forschungsprogramm/Forschungsfragen </h3>
 <p>
 Das dreiteilige Forschungsprojekt widmet sich der Frage, wie künstlerisches
 Praxiswissen – als Prozess-, Handlungs- und Reflexionswissen – Gesellschaft
@@ -221,6 +221,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 	</body>
 
 </html>
+
 
 
 
