--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<img src="/images/header (1).jpg" alt="logo" style="width:100%">
 									<br><br><br>
 									<header class="major">
-										<h2 class="forschungsprogramm-title">Forschungsprojekt Kunst in Gesellschaft: <br>Transfer als Praxis- und
+										<h2>Forschungsprojekt Kunst in Gesellschaft: <br>Transfer als Praxis- und
 Wissensform</h2>
 									</header>
 									<p>Kunst wirkt – und zwar weit in gesellschaftliche Felder hinein. Die beiden
@@ -203,4 +203,5 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
