--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Braunschweig (HBK) und die Hochschule für Musik, Theater und Medien Hannover
 zumeist wenig bekannten und kaum sichtbaren Wirkungsweisen der Künste
 hervorzuheben und zu erforschen.</p>
 
-<h2>Forschungsprogramm/Forschungsfragen </h2>
+<h2>Forschungsprogramm & Forschungsfragen </h2>
 <p>
 Das dreiteilige Forschungsprojekt widmet sich der Frage, wie künstlerisches
 Praxiswissen – als Prozess-, Handlungs- und Reflexionswissen – Gesellschaft
@@ -203,3 +203,4 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
