--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Braunschweig (HBK) und die Hochschule für Musik, Theater und Medien Hannover
 zumeist wenig bekannten und kaum sichtbaren Wirkungsweisen der Künste
 hervorzuheben und zu erforschen.</p>
 
-<h2>Forschungsprogramm & Forschungsfragen </h2>
+<h3>Forschungsprogramm & Forschungsfragen </h3>
 <p>
 Das dreiteilige Forschungsprojekt widmet sich der Frage, wie künstlerisches
 Praxiswissen – als Prozess-, Handlungs- und Reflexionswissen – Gesellschaft
@@ -75,9 +75,9 @@ Beitrag vermögen künstlerische Praxisformen hier zu leisten?
 Im Rahmen des Projekts werden drei zentrale Forschungsfelder untersucht:	
 </p>
 
-<h1>Forschungsteil I</h1>
-<h2>Künstlerische Praxisformen in verschiedenen
-gesellschaftlichen Feldern</h2>
+<h3>Forschungsteil I</h3>
+<h3>Künstlerische Praxisformen in verschiedenen
+gesellschaftlichen Feldern</h3>
 <p>Anhand qualitativer Befragungen von Absolvent*innen der HBK und der HMTMH, die
 in außerkünstlerischen Bereichen tätig sind, untersucht das Teilprojekt den Transfer
 künstlerischer Praxisformen in verschiedene gesellschaftliche Felder. Im Zentrum
@@ -87,9 +87,9 @@ gesellschaftliche Prozesse gestalten und Transformationsprozesse anstoßen. Auf
 Basis der Praxisbeschreibungen können nicht zuletzt Aussagen über die komplexen
 Wirkungsweisen künstlerischer Ausbildungen getroffen werden.</p>
 
-<h1>Forschungsteil II</h1>
-<h2> Kunst als öffentliche Praxis in gesellschaftlichen
-Transformationsprozessen</h2>
+<h3>Forschungsteil II</h3>
+<h3> Kunst als öffentliche Praxis in gesellschaftlichen
+Transformationsprozessen</h3>
 <p>In diesem Teilprojekt werden künstlerische Positionen im öffentlichen Raum
 untersucht, insbesondere solche, die sich an der Schnittstelle von Aktivismus und
 Kunst bewegen. Im Zentrum stehen unter anderem Fragestellungen zu hybriden
@@ -98,8 +98,8 @@ Gegenöffentlichkeiten im Kontext der autoritären Dynamiken der heutigen Zeit 
 auch zu Verschränkungen von Theorie und Praxis in hydrofeministischen Praktiken
 und Care-Diskursen.</p>
 
-<h1>Forschungsteil III</h>
-<h2>Partnerschaften und kultureller Wissenstransfer</h2>
+<h3>Forschungsteil III</h3>
+<h3>Partnerschaften und kultureller Wissenstransfer</h3>
 <p>
 Das Teilprojekt analysiert zum einen Partnerschaften und kulturellen
 Wissenstransfer u. a. anhand von Kommunikationsweisen und Strategien von
@@ -118,45 +118,63 @@ die widerständigen Potenziale künstlerischer Praxis im Sinne einer offenen,
 demokratischen und vielfältigen Gesellschaft sichtbar zu machen.	
 </p>
 
-<h1>Forschungsteile</h1>
+<h3>Forschende</h3>
 
 <p>
 	<h3>Forschungsteil I</h3>
-Prof. *in Dr. Dorothea Hilliger (HBK), Kontakt: d.hilliger@hbk-bs.de <br>
-Prof. *in Regina Guhl (HMTMH) Kontakt: regina.guhl@ijk.hmtm-hannover.de <br><br>
-Wissenschaftliche Mitarbeiterinnen:<br>
-Dr. Lea-Sophie Schiel (HMTMH), Kontakt: leasophie.schiel@ijk.hmtm-hannover.de
+	Prof. *in Dr. Dorothea Hilliger (HBK), Kontakt: 
+	<a href="mailto:d.hilliger@hbk-bs.de">d.hilliger@hbk-bs.de</a> <br>
+	Prof. *in Regina Guhl (HMTMH), Kontakt: 
+	<a href="mailto:regina.guhl@ijk.hmtm-hannover.de">regina.guhl@ijk.hmtm-hannover.de</a> <br><br>
+	Wissenschaftliche Mitarbeiterinnen:<br>
+	Dr. Lea-Sophie Schiel (HMTMH), Kontakt: 
+	<a href="mailto:leasophie.schiel@ijk.hmtm-hannover.de">leasophie.schiel@ijk.hmtm-hannover.de</a>
 </p>
 
     <h3>Forschungsteil II</h3>
 
-    Prof. *in Dr. Rahel Puffert (HBK), Kontakt: r.puffert@hbk-bs.de <br><br>
-
+    Prof. *in Dr. Rahel Puffert (HBK), Kontakt: 
+	<a href="mailto:r.puffert@hbk-bs.de">r.puffert@hbk-bs.de</a> <br><br>
     Wissenschaftliche Mitarbeiterinnen:<br>
-    Dr. Anne Kurr (HBK) Kontakt: a.kurr@hbk-bs.de<br>
-    Nora Brünger (HBK) Kontakt: n.bruenger@hbk-bs.de
+    Dr. Anne Kurr (HBK), Kontakt: 
+	<a href="mailto:a.kurr@hbk-bs.de">a.kurr@hbk-bs.de</a>
+<br>
+    Nora Brünger (HBK), Kontakt: 
+	<a href="mailto:n.bruenger@hbk-bs.de">n.bruenger@hbk-bs.de</a>
 
 <p>
 	<h3>Forschungsteil III</h3>
-Prof. *in Dr. Annette Löseke (HBK) Kontakt: a.loeseke@hbk-bs.de<br>
-Prof. *in Dr. Christine E. Meltzer (HMTMH) Kontakt: Christine.Meltzer@ijk.hmtm-
-hannover.de<br><br>
+	Prof. *in Dr. Annette Löseke (HBK), Kontakt: 
+	<a href="mailto:a.loeseke@hbk-bs.de">a.loeseke@hbk-bs.de</a><br>
+	Prof. *in Dr. Christine E. Meltzer (HMTMH), Kontakt: 
+	<a href="mailto:Christine.Meltzer@ijk.hmtm-hannover.de">Christine.Meltzer@ijk.hmtm-hannover.de</a>
+
+									<br><br>
 Wissenschaftliche Mitarbeiter*innen:<br>
-Dr. Aljoscha Paulus (HMTMH) Kontakt: Aljoscha.Paulus@ijk.hmtm-hannover.de
-<br>Weiqi Wang (HBK) Kontakt: w.wang@hbk-bs.de<br><br>
-<strong>Ansprechpartnerin</strong> <br>
-Koordination: <br>Dr. Susanne Bosch, Kontakt:
+Dr. Aljoscha Paulus (HMTMH), Kontakt: 
+<a href="mailto:aljoscha.paulus@ijk.hmtm-hannover.de">Aljoscha.Paulus@ijk.hmtm-hannover.de</a>
+<br>
+Weiqi Wang (HBK), Kontakt: 
+<a href="mailto:w.wang@hbk-bs.de">w.wang@hbk-bs.de</a>
+</p>	
+	<br><br>
+<h3>Ansprechpartnerin</h3> 
+Koordination: <br>Dr. Susanne Bosch, Kontakt: 
 <a href="mailto:su.bosch@hbk-bs.de">su.bosch@hbk-bs.de</a>
 </p>
-<p><Strong>Laufzeit:</Strong><br>01.05.2024 – 30.06.2029</p>
-<p><Strong>Fördermittelgeber:</Strong><br>Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
+<p><h3>Laufzeit:</h3>
+01.05.2024 – 30.06.2029</p>
+<p><h3>Fördermittelgeber:</h3>
+Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
 durch das Land Niedersachsen und die VolkswagenStiftung.</p>
-<p><Strong>LIKE&amp;SHARE</Strong><br>
+<p><h3>LIKE&amp;SHARE</h3>
 <a href="https://www.instagram.com/kunstingesellschaft/">Instagram</a>
 <a href="https://www.linkedin.com/in/kunst-in-gesellschaft-3b2905395/">LinkedIn</a>
+<a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/">Seite der HBK Braunschweig</a>
 </p>
 <br>
-
+<h3 style="color: #5900FE;">Diese Webseite befindet sich gerade im Aufbau.</h3>
+<br>
 <img src="/images/HBK_Logo.JPG" alt="logo HBK" style="width:30%">
 <img src="/images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%">
 <img src="/images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%">
@@ -203,4 +221,5 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
