--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!--	<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<img src="/images/KiG_Logo_de_RGB.jpgheader (1).jpg" alt="logo" style="width:100%">
+								<img src="/images/KiG_Logo_de_RGB.jpg" alt="logo" style="width:100%">
 
 							
 							</header>
@@ -221,6 +221,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
 
 
