--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<section id="two">
 
 								<div class="inner">
-								<img src="/images/header (1).jpg" alt="logo" style="width:100%">
+								<img src="/images/KiG_Logo_de_RGB.jpg" alt="logo" style="width:100%">
 									<br><br><br>
 									
 										<h3>Forschungsprojekt Kunst in Gesellschaft: <br>Transfer als Praxis- und
@@ -221,6 +221,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
 
 
