--- a/index.html
+++ b/index.html
@@ -167,11 +167,12 @@ Koordination: <br>Dr. Susanne Bosch, Kontakt:
 <p><h3>Fördermittelgeber:</h3>
 Das Förderprogramm „Wissenschaftsräume“ wird unterstützt
 durch das Land Niedersachsen und die VolkswagenStiftung.</p>
-<p><h3>LIKE&amp;SHARE</h3>
+
+<!-- <p><h3>LIKE&amp;SHARE</h3>
 <a href="https://www.instagram.com/kunstingesellschaft/">Instagram</a>
 <a href="https://www.linkedin.com/in/kunst-in-gesellschaft-3b2905395/">LinkedIn</a>
 <a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/">Seite der HBK Braunschweig</a>
-</p>
+</p>-->
 <br>
 <h3 style="color: #5900FE;">Diese Webseite befindet sich gerade im Aufbau.</h3>
 <br>
@@ -221,6 +222,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
 
 
