--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 <br>
 <h3 style="color: #5900FE;">Diese Webseite befindet sich gerade im Aufbau.</h3>
 <br>
-<img src="/images/HBK_Logo.JPG" alt="logo HBK" style="width:30%">
+<a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/"><img src="/images/HBK_Logo.JPG" alt="logo HBK" style="width:30%"></a>
 <img src="/images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%">
 <img src="/images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%">
 
@@ -222,6 +222,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
 
 
