--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 <h3 style="color: #5900FE;">Diese Webseite befindet sich gerade im Aufbau.</h3>
 <br>
 <a href="https://www.hbk-bs.de/forschung/forschungsprojekte/transferforschung/"><img src="/images/HBK_Logo.JPG" alt="logo HBK" style="width:30%"></a>
-<img src="/images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%">
-<img src="/images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%">
+<a href="https://www.hmtm-hannover.de/de/hochschule/profil-organisation/exzellent-in-kunst-und-wissenschaft/"><img src="/images/Logo_hmtmh_4c_01 Kopie.jpg" alt="logo" style="width:30%"></a>
+<a href="https://zukunft.niedersachsen.de/"><img src="/images/RZ_VWS_Zukunft-Niedersachsen_Logo_Schwarz_RGB.jpg" alt="logo" style="width:30%"></a>
 
 
 	<!-- Footer -->
@@ -222,6 +222,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
 
 
