--- a/index.html
+++ b/index.html
@@ -121,25 +121,19 @@ und Care-Diskursen.</p>
 
 
 <h3>Forschungsteil III</h3>
-<h3>Partnerschaften und kultureller Wissenstransfer</h3>
+<p>Das Teilprojekt richtet den Fokus auf Kulturinstitutionen und ihres wechselseitigen Transferpotenzials in den Bereichen Diversifizierung oder Stärkung der Demokratie.</p>
+<h3>III a Umkämpfte Freiheiten und Erfahrungstransfers in Kulturbetrieben</h3>
 <p>
-Das Teilprojekt analysiert zum einen Partnerschaften und kulturellen
-Wissenstransfer u. a. anhand von Kommunikationsweisen und Strategien von
-
-öffentlich geförderten Kulturinstitutionen in Niedersachsen angesichts des Erstarkens
-anti-demokratischer Parteien und ihrer unmittelbaren und diskursiven Einflussnahme
-auf kulturadministrative Prozesse. Zum anderen findet eine Fokussierung auf die
-Transferleistungen in Museen anhand eines Vermittlungskonzept statt, welches als
-„Open Space“ bekannt ist.
- 
-Das Projekt versteht Transfer nicht als Einbahnstraße, sondern als dynamischen,
-multidirektionalen Austauschprozess, in dem sich Kunst, Gesellschaft und
-Wissenschaft gegenseitig herausfordern und bereichern. Ziel ist es, die Rolle der
-Kunsthochschulen als Impulsgeber für gesellschaftliche Innovation zu stärken und
-die widerständigen Potenziale künstlerischer Praxis im Sinne einer offenen,
-demokratischen und vielfältigen Gesellschaft sichtbar zu machen.	
+Das Teilprojekt untersucht, wie öffentlich getragene Kulturbetriebe im Kontext des gesellschaftlichen "Rechtsrucks" 
+auf das Erstarken rechtsradikaler und (neo-)faschistischer Kräfte reagieren. 
+Im Fokus stehen kommunikative Strategien zum Umgang mit Bedrohungen künstlerischer Freiheit und kulturadministrativer Prozesse. 
+Anhand ausgewählter Fallstudien und eines regionalen Vergleichs werden Erfahrungen im Umgang mit Faschisierungstendenzen sowie deren Transferpotenziale analysiert.	
 </p>
- 
+<h3>III b Transfer an Museen</h3>
+<p>Forschungsteil III b beforscht potenzielle Transferleistungen in Museen, etwa anhand von Vermittlungskonzepten wie „Open Spaces“. 
+Mittels qualitativer Forschungsmethoden werden ausgewählte Museen hinsichtlich ihres Transferpotenzials in Bereichen wie Diversifizierung oder Stärkung der Demokratie untersucht.</p>
+
+
 
 <p>
 	Prof. *in Dr. Annette Löseke (HBK), Kontakt: 
@@ -220,6 +214,7 @@ durch das Land Niedersachsen und die VolkswagenStiftung.</p>
 
 	</body>
 </html>
+
 
 
 
